@@ -3,6 +3,10 @@
     - djm@cvs.openbsd.org 2008/06/30 08:05:59
       [PROTOCOL.agent]
       typo: s/constraint_date/constraint_data/
+   - djm@cvs.openbsd.org 2008/06/30 12:15:39
+     [serverloop.c]
+     only pass channel requests on session channels through to the session
+     channel handler, avoiding spurious log messages; ok! markus@
 
 20080630
  - (djm) OpenBSD CVS Sync
@@ -4486,4 +4490,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5039 2008/07/02 12:31:31 dtucker Exp $
+$Id: ChangeLog,v 1.5040 2008/07/02 12:32:14 dtucker Exp $
